llama-cpp-sys-2/src/common.rs

/* automatically generated by rust-bindgen 0.72.1 */

use crate::*;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct llama_rs_mtp_speculative {
    _unused: [u8; 0],
}
pub const LLAMA_RS_STATUS_OK: llama_rs_status = 0;
pub const LLAMA_RS_STATUS_INVALID_ARGUMENT: llama_rs_status = -1;
pub const LLAMA_RS_STATUS_ALLOCATION_FAILED: llama_rs_status = -2;
pub const LLAMA_RS_STATUS_EXCEPTION: llama_rs_status = -3;
pub type llama_rs_status = ::std::os::raw::c_int;
extern "C" {
    pub fn llama_rs_json_schema_to_grammar(
        schema_json: *const ::std::os::raw::c_char,
        force_gbnf: bool,
        out_grammar: *mut *mut ::std::os::raw::c_char,
    ) -> llama_rs_status;
}
extern "C" {
    pub fn llama_rs_sampler_init_grammar(
        vocab: *const llama_vocab,
        grammar_str: *const ::std::os::raw::c_char,
        grammar_root: *const ::std::os::raw::c_char,
    ) -> *mut llama_sampler;
}
extern "C" {
    pub fn llama_rs_sampler_init_grammar_lazy(
        vocab: *const llama_vocab,
        grammar_str: *const ::std::os::raw::c_char,
        grammar_root: *const ::std::os::raw::c_char,
        trigger_words: *mut *const ::std::os::raw::c_char,
        num_trigger_words: usize,
        trigger_tokens: *const llama_token,
        num_trigger_tokens: usize,
    ) -> *mut llama_sampler;
}
extern "C" {
    pub fn llama_rs_sampler_init_grammar_lazy_patterns(
        vocab: *const llama_vocab,
        grammar_str: *const ::std::os::raw::c_char,
        grammar_root: *const ::std::os::raw::c_char,
        trigger_patterns: *mut *const ::std::os::raw::c_char,
        num_trigger_patterns: usize,
        trigger_tokens: *const llama_token,
        num_trigger_tokens: usize,
    ) -> *mut llama_sampler;
}
extern "C" {
    pub fn llama_rs_sampler_accept(
        sampler: *mut llama_sampler,
        token: llama_token,
    ) -> llama_rs_status;
}
extern "C" {
    pub fn llama_rs_fit_params(
        path_model: *const ::std::os::raw::c_char,
        mparams: *mut llama_model_params,
        cparams: *mut llama_context_params,
        tensor_split: *mut f32,
        tensor_buft_overrides: *mut llama_model_tensor_buft_override,
        margins: *mut usize,
        n_ctx_min: u32,
        log_level: ggml_log_level,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn llama_rs_memory_breakdown_print(ctx: *const llama_context);
}
extern "C" {
    pub fn llama_rs_mtp_speculative_init(
        ctx_tgt: *mut llama_context,
        ctx_dft: *mut llama_context,
        n_max: i32,
        n_min: i32,
        p_min: f32,
    ) -> *mut llama_rs_mtp_speculative;
}
extern "C" {
    pub fn llama_rs_mtp_speculative_free(spec: *mut llama_rs_mtp_speculative);
}
extern "C" {
    pub fn llama_rs_mtp_speculative_begin(
        spec: *mut llama_rs_mtp_speculative,
        prompt_tokens: *const llama_token,
        prompt_tokens_count: usize,
    ) -> llama_rs_status;
}
extern "C" {
    pub fn llama_rs_mtp_speculative_process(
        spec: *mut llama_rs_mtp_speculative,
        batch: *const llama_batch,
    ) -> llama_rs_status;
}
extern "C" {
    pub fn llama_rs_mtp_speculative_draft(
        spec: *mut llama_rs_mtp_speculative,
        n_past: llama_pos,
        id_last: llama_token,
        prompt_tokens: *const llama_token,
        prompt_tokens_count: usize,
        out_tokens: *mut llama_token,
        out_tokens_capacity: usize,
        out_tokens_count: *mut usize,
    ) -> llama_rs_status;
}
extern "C" {
    pub fn llama_rs_mtp_speculative_accept(
        spec: *mut llama_rs_mtp_speculative,
        n_accepted: u16,
    ) -> llama_rs_status;
}
extern "C" {
    pub fn llama_rs_string_free(ptr: *mut ::std::os::raw::c_char);
}
